Use getDeclaredConstructor() in Config